fix alignements

--- a/daikoku/javascript/src/style/components/pagination.scss
+++ b/daikoku/javascript/src/style/components/pagination.scss
@@ -5,7 +5,7 @@
   list-style-type: none;
   justify-content: center;
   align-items: center;
-  margin-top: 20px;
+  margin-top: 16px;
 
   li, li:not(.next,.previous) a {
     color: $pagination-text-color;
